Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
-	COPYRIGHT GIT TRAINING 2.0
+	COPYRIGHT 2014 GIT TRAINING 2.0
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some interesting stuff
 		</p>
 	</main>
 	<footer class="container">
