mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	COPYRIGHT 2014 GIT TRAINING 2.0
+	Adding changes before rebasing conflicts
 -->
 <head>
 	<title>An Very Respectful Website</title>
