--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflicts
 -->
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,12 +18,12 @@
 	<main class="container">
 	<!-- Junk Filler Content -->
 		<p>
-			Just stuff for now. Not sure if we should
-			replace this or not.
+			I'm not sure what will go here, but I'm sure
+			it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jason Taylor</p>
+		<p>&copy; Company 2014</p>
 	</footer>
 </body>
 </html>
