Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	COPYRIGHT 2014 GIT TRAINING 2.0
-	Adding changes before rebasing conflicts
 -->
 <head>
-	<title>Lots of Trouble</title>
+	<title>Lots of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
